bugfix: fixed slider horizontal overflow

--- a/src/section-one/SectionOne.scss
+++ b/src/section-one/SectionOne.scss
@@ -5,6 +5,7 @@
   background: linear-gradient(rgba(119, 119, 119, 0.719), rgba(0, 0, 0, 0.541)), url("../assets/glery1screen/wild.jpg");
   background-size: cover;
   position: relative;
+  overflow: hidden;
 
   .container {
     height: 100%;
