--- a/src/section-three/PetsInZoo.scss
+++ b/src/section-three/PetsInZoo.scss
@@ -1,6 +1,8 @@
 @import '../variables';
 
 .section-three {
+  overflow: hidden;
+
   .container {
     margin: 0 10px;
   }
